Function: Sign Up form with First and Last Name. Homepage shows Posts of USer with their First Name and links to their Profiles where the URL Takes the parameter Username to avoid name conflicts

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -15,9 +15,8 @@
     <p>
       <hr>
       by 
-      <a href="{% url 'profile' post.author.username %}" aria-label="View profile of {{ post.author.username }}">
-        {{ post.author.username }}
-      </a>, 
+      <a href="{% url 'profile' post.author.username%}" aria-label="View profile of {{ post.author.username }}">
+        {{ post.author.username }}</a>, 
       created on: {{ post.created_on|date:"d.m.Y" }}
     </p>
 
