--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -38,7 +38,7 @@
             <p class="text-center">
               by 
               <a href="{% url 'profile' post.author.username %}" aria-label="View profile of {{ post.author.username }}">
-                {{ post.author.username }}
+                {{ post.author.first_name }}
               </a>
             </p>
           </div>
