--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -36,8 +36,8 @@
               {{ post.content|truncatechars:150 }}
             </p>
             <p class="text-center">
-              by 
-              <a href="{% url 'profile' post.author.username %}" aria-label="View profile of {{ post.author.username }}">
+              posted by 
+              <i class="bi bi-person-fill"></i><a href="{% url 'profile' post.author.username %}" aria-label="View profile of {{ post.author.username }}">
                 {{ post.author.first_name }}
               </a>
             </p>
