--- a/blog/templates/blog/profile.html
+++ b/blog/templates/blog/profile.html
@@ -7,9 +7,9 @@
     </h2>
 
     {% if request.user == profile_user %}
-    <div class="d-grid d-md-block text-md-end mt-3">
+    <div class="text-md-end">
       <button type="button"
-              class="btn btn-danger btn-sm px-4 py-2"
+              class="btn btn-danger btn-sm px-2 py-1"
               data-bs-toggle="modal"
               data-bs-target="#deleteProfileModal"
               aria-label="Open dialog to delete profile and all posts">
@@ -76,7 +76,7 @@
   </div>
 </div>
 <!-- A button to add new post as signed in user -->
- 
+
 {% if request.user == profile_user %}
 <div class="text-center mt-4 mb-5">
   <a href="{% url 'post_create' %}" class="btn btn-primary btn-lg px-4 py-2" aria-label="Add new post">
