--- a/blog/templates/blog/profile.html
+++ b/blog/templates/blog/profile.html
@@ -28,7 +28,7 @@
         <div class="card h-100 shadow">
           {% if post.image %}
           <a href="{% url 'post_detail' post.slug %}" aria-label="Open post titled {{ post.title }}">
-            <img src="{{ post.image.url }}" class="card-img-top" alt="{{ post.title }}">
+            <img src="{{ post.image.url }}" class="card-img-top fixed-img" alt="{{ post.title }}">
           </a>
           {% endif %}
           <div class="card-body d-flex flex-column">
