--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -75,7 +75,7 @@
 
   {% if messages %}
   <!-- new post success message -->
-  <div class="container mt-3">
+  <div class="container mt-2 mb-2 px-4">
     {% for message in messages %}
       <div class="alert alert-success alert-dismissible fade show" role="alert">
         {{ message }}
