--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,17 +6,17 @@
     <meta charset="UTF-8">
     <title>Microblogify</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
   <!-- favicon -->
-  <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/icons8-blog-96.png">
-  <link rel="icon" type="image/png" sizes="144x144" href="assets/favicon/icons8-blog-144.png">
-  <link rel="icon" type="image/png" sizes="240x240" href="assets/favicon/icons8-blog-240.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicon/icons8-blog-96.png">
+  <link rel="icon" type="image/png" sizes="144x144" href="/favicon/icons8-blog-144.png">
+  <link rel="icon" type="image/png" sizes="240x240" href="/favicon/icons8-blog-240.png">
 
   <!-- Optional: Apple Touch Icon -->
-  <link rel="apple-touch-icon" sizes="144x144" href="assets/favicon/icons8-blog-144.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/favicon/icons8-blog-144.png">
 
   <!-- Optional: Fallback für ältere Browser -->
-  <link rel="shortcut icon" href="assets/favicon/icons8-blog-96.png" type="image/png">
+  <link rel="shortcut icon" href="/favicon/icons8-blog-96.png" type="image/png">
     <!-- Bootstrap 5 via CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
