Docs: Readme change and finish

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -7,13 +7,12 @@
     <title>Microblogify</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!--{% static ' favicon -->
-  <link rel="favicon" type="image/png" sizes="96x96" href="{% static '/favicon/icons8-blog-96.png' %}">
-  <link rel="favicon" type="image/png" sizes="144x144" href="{% static '/favicon/icons8-blog-144.png' %}">
-  <link rel="favicon" type="image/png" sizes="240x240" href="{% static '/favicon/icons8-blog-240.png' %}">
-
-  <!-- Optional: Apple Touch Icon -->
-  <link rel="apple-touch-icon" sizes="144x144" href="{% static '/favicon/icons8-blog-144.png' %}">
+  <!-- Favicon -->
+  <link rel="icon" href="{% static 'favicon/icons8-blog-96.png' %}" type="image/png">
+  <link rel="icon" sizes="144x144" href="{% static 'favicon/icons8-blog-144.png' %}" type="image/png">
+  <link rel="icon" sizes="240x240" href="{% static 'favicon/icons8-blog-240.png' %}" type="image/png">
+  <link rel="apple-touch-icon" sizes="144x144" href="{% static 'favicon/icons8-blog-144.png' %}">
+  <link rel="shortcut icon" href="{% static 'favicon/icons8-blog-96.png' %}" type="image/png">
 
   <!-- Optional: Fallback für ältere Browser -->
   <link rel="shortcut icon" href="{% static '/favicon/icons8-blog-96.png"' %} type="image/png">
