--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,21 +7,22 @@
   <div class="col-md-8">
     <h2 class="mb-4 text-center" aria-label="Post titled {{ post.title }}">{{ post.title }}</h2>
 
-  <!-- image with alt -->
+    <!-- image with alt -->
     {% if post.image %}
-        <img src="{{ post.image.url }}" alt="Image for post titled '{{ post.title }}'" class="img-fluid rounded mb-4 d-block mx-auto shadow">
+      <img src="{{ post.image.url }}" alt="Image for post titled '{{ post.title }}'" class="img-fluid rounded mb-4 d-block mx-auto shadow">
     {% endif %}
 
-    <p>
-      <hr>
+    <hr>
+    <div>
       by 
-      <a href="{% url 'profile' post.author.username%}" aria-label="View profile of {{ post.author.username }}">
+      <a href="{% url 'profile' post.author.username %}" aria-label="View profile of {{ post.author.username }}">
         {{ post.author.username }}</a>, 
       created on: {{ post.created_on|date:"d.m.Y" }}
-    </p>
+    </div>
 
     <div class="justify-text mt-4">{{ post.content|linebreaksbr }}</div>
     <hr>
+
     {% if request.user == post.author %}
       <a href="{% url 'post_update' post.slug %}" class="btn btn-warning btn-sm" aria-label="Edit post titled {{ post.title }}">Edit</a>
       <button type="button"
@@ -65,7 +66,7 @@
             </div>
           </form>
         {% else %}
-          <p class="mt-2">{{ comment.content|linebreaks }}</p>
+          <div class="mt-2">{{ comment.content|linebreaks }}</div>
 
           {% if user == comment.author %}
             <div class="d-flex gap-2 mb-2 mt-3">
