--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -2,6 +2,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+{% if request.user.is_authenticated %}
 <div class="row justify-content-center mt-2">
   <div class="col-12 col-md-7 col-lg-8">
 
@@ -87,4 +88,14 @@
 
   </div>
 </div>
+{% else %}
+<div class="container mt-5 text-center">
+  <div class="alert alert-warning shadow-sm" role="alert">
+    <h4 class="alert-heading">Authentication Required</h4>
+    <p>You must be <a href="{% url 'login' %}">logged in</a> to create or edit a post.</p>
+    <hr>
+    <p class="mb-0">Please log in to access this page.</p>
+  </div>
+</div>
+{% endif %}
 {% endblock %}
